2007-05-19 Anthony Arobone <aarobone@gmail.com>
	* Added compact option
	* Bug fix attempt for Compiz where the entire screen was not being used in
	normal and fullscreen mode.

2007-05-06 Anthony Arobone <aarobone@gmail.com>
	* Incremented version to 0.1.1
	* Added better error reporting for SVG images
	* Fixed src/Makefile.am to use DESTDIR for closure.pc

2007-04-29	Anthony Arobone	<aarobone@gmail.com>
	* 0.1 source archive released

2007-04-23	Anthony Arobone	<aarobone@gmail.com>
	* Initial Closure import